--- a/src/Snakefile
+++ b/src/Snakefile
@@ -52,7 +52,7 @@ rule all:
         #"data/liver/high_expressed_single_isoform_genes.txt",
         #"results/url.txt",
         #"results/alpine/liver/",
-        #"results/alpine_fit_plots/liver/",
+        "results/alpine_fit_plots/liver/",
         #"results/alpine_rnafold_fits/liver/",
         #lambda wildcards: expand("data/{sample_id}/alpine_rnafold.model.rda", sample_id = [id for id in samples_by_tissue['liver'] if can_alpine(id)]),
         "results/testis/pcr_dupe_rate_coverage_plot/",
@@ -212,6 +212,7 @@ rule run_alpine:
         bai = "data/{sample_id}/bam/Aligned.sortedByCoord.out.bam.bai",
         ensdb = "data/Mus_musculus.GRCm38.102.gtf.sqlite",
         transcripts = lambda wildcards: f"data/{samples_by_id[wildcards.sample_id]['tissue']}/high_expressed_single_isoform_genes.txt",
+        dummy = "data/{sample_id}/fastq",
     output:
         modelfile = protected("data/{sample_id}/alpine.model.rda"),
     params:
@@ -240,7 +241,8 @@ rule run_alpine_rnafold:
         bai = "data/{sample_id}/bam/Aligned.sortedByCoord.out.bam.bai",
         ensdb = "data/Mus_musculus.GRCm38.102.gtf.sqlite",
         transcripts = lambda wildcards: f"data/{samples_by_id[wildcards.sample_id]['tissue']}/high_expressed_single_isoform_genes.txt",
-        fragtypes = lambda wildcards: f"data/{samples_by_id[wildcards.sample_id]['tissue']}/alpine_rnafold.fragtypes.rda"
+        fragtypes = lambda wildcards: f"data/{samples_by_id[wildcards.sample_id]['tissue']}/alpine_rnafold.fragtypes.rda",
+        dummy = "data/{sample_id}/fastq",
     output:
         modelfile = protected("data/{sample_id}/alpine_rnafold.model.rda"),
     params:
@@ -281,6 +283,7 @@ rule plot_alpine_fits:
         models = lambda wildcards: expand("data/{sample_id}/alpine.model.rda", sample_id = [s for s in samples_by_tissue[wildcards.tissue] if can_alpine(s)]),
         ensdb = "data/Mus_musculus.GRCm38.102.gtf.sqlite",
         transcripts = "data/{tissue}/high_expressed_single_isoform_genes.txt",
+        sample_info = "results/sample_info.txt"
     output:
         outdir = directory("results/alpine_fit_plots/{tissue}/"),
     resources:
@@ -343,3 +346,12 @@ rule plot_pcr_dupe_rate_coverage:
         mem_mb = 24_000
     script:
       "scripts/plot_pcr_dupe_rate_coverage.py"
+
+rule sample_info:
+    output:
+        "results/sample_info.txt"
+    run:
+        import polars as pl
+        pl.DataFrame(samples)\
+            .select(pl.all().cast(pl.Utf8))\
+            .write_csv("results/sample_info.txt", separator="\t")
